--- a/por.html
+++ b/por.html
@@ -198,7 +198,7 @@
           <div class="cta">
             <a class="btn primary" href="#portfolio">View Portfolio</a>
             <!-- ganti # dengan link CV kamu (PDF) -->
-            <a class="btn" href="assets/cv-marizke.pdf" target="_blank" rel="noopener">Download CV</a>
+            <a class="btn" href="cv-marizke.pdf" target="_blank" rel="noopener">Download CV</a>
             <a class="btn" href="#contact">Contact</a>
           </div>
         </div>
